# project4

./: CMakeLists.txt  README.txt  stego.c  stegoDestroy.c  stegoRead.c
